--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #MYBATIS
 mybatis.type-aliases-package=com.lboeri.boeriapi.dao.**.entity
-mybatis.mapper-locations=classpath*:**/mapping/*Mapper.xml
+mybatis.mapper-locations=classpath*:/mapper/**/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.use-generated-keys=true
 mybatis.configuration.default-fetch-size=100
