--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<version>1.3.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
 			<version>4.1.4</version>
@@ -55,10 +60,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- oracle -->
+		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc8 -->
 		<dependency>
 			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc14</artifactId>
-			<version>10.2.0.4.0</version>
+			<artifactId>ojdbc8</artifactId>
+			<version>11.2.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
