jwt ，用户 部门 权限 菜单实例提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8088
 #MYBATIS
 mybatis.type-aliases-package=com.lboeri.boeriapi.dao.**.entity
 mybatis.mapper-locations=classpath*:/mapper/**/*Mapper.xml
@@ -7,7 +8,6 @@ mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=30
 
 #DATASOURCE
-
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost/boeri?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -29,3 +29,8 @@ spring.datasource.filters=stat
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 logging.level.com.lboeri.boeriapi.dao.singleton=debug
+#编码格式
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
